--- a/task4/responsive.css
+++ b/task4/responsive.css
@@ -107,7 +107,10 @@
     } 
     
 }
-@media (min-width: 768px) {
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
     .menu, .menu-bar { 
         height: 60%;
     }
