--- a/task4/style.css
+++ b/task4/style.css
@@ -8,7 +8,7 @@ p{
 }
 .container {
   width: 100%;
-  max-width:1200px;
+  /*max-width:1200px;*/
 	/* padding: 0 1rem; */
 	margin: 0 auto;
 	position: relative;
